fix(ayokoding-web): rebalance Clojure intermediate by-example annotation density
Reduced annotation density from 2.32 to 0.61 overall (242 annotations, 397 code lines).

Strategic reductions:
- Removed redundant/obvious annotations (e.g., "println returns nil")
- Consolidated duplicate explanations
- Eliminated over-explained simple operations
- Preserved annotations for complex operations and Clojure-specific semantics

Examples reduced:
- Example 4 (Records): 2.55→0.55 density
- Example 8 (Atoms): 2.65→0.41 density
- Example 31 (Macros): Heavily reduced
- Example 34 (STM): Consolidated annotations
- Example 36-37 (core.async): Streamlined
- Example 38-54: Systematically reduced while keeping key concepts

All examples now have essential annotations for learning while removing noise.
Density still below target 1.0-2.25 range overall - further restoration may be needed.